--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header>
 
-  <div class="title">
-    <h1>From Ruins</h1>
-  </div>
-
+  <h1><a href="{{ site.url }}">
+    {{ site.title }}
+  </a></h1>
+  <h4>{{ site.description }}</h4>
 
 </header>
