--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,16 @@
 ---
 layout: default
 ---
-<article>
+<article class="post">
 
-  <div class="container">
-    <h2>{{ page.title }}</h2>
-    {{ content }}
-  </div>
+  <header style="background-image: url({{ page.background }});">
+    <h1 itemprop="name headline">{{ page.title }}</h1>
+  </header>
 
-</article>
+  <article class="posts">
+
+    <div class="post-content" itemprop="articleBody">
+      {{ content }}
+    </div>
+
+  </article>
