--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,18 +5,81 @@
 
   <body>
 
-    {% include nav.html %}
+    <div id="paper-back">
+    	<nav>
+    		<div class="close"><span></span></div>
+        <a href="{{ site.url }}">Home</a>
+    		<a href="{{ site.url }}about/">About</a>
 
-    {% include header.html %}
+        <div class="designed">Designed by<a href="https://twitter.com/InRetentis">@InRetentis</a></div>
 
+    	</nav>
+    </div>
+    <div id="paper-window">
+    	<div id="paper-front">
+    		<div class="hamburger"><span></span></div>
 
     {{ content }}
 
+    </div>
 
-    {% include footer.html %}
+    <script>
+    var paperMenu = {
+    	$window: $('#paper-window'),
+    	$paperFront: $('#paper-front'),
+    	$hamburger: $('.hamburger'),
+    	offset: 1800,
+    	pageHeight: $('#paper-front').outerHeight(),
 
+    	open: function() {
+    		this.$window.addClass('tilt');
+    		this.$hamburger.off('click');
+    		$('#container, .hamburger').on('click', this.close.bind(this));
+    		this.hamburgerFix(true);
+    		console.log('opening...');
+    	},
+    	close: function() {
+    		this.$window.removeClass('tilt');
+    		$('#container, .hamburger').off('click');
+    		this.$hamburger.on('click', this.open.bind(this));
+    		this.hamburgerFix(false);
+    		console.log('closing...');
+    	},
+    	updateTransformOrigin: function() {
+    		scrollTop = this.$window.scrollTop();
+    		equation = (scrollTop + this.offset) / this.pageHeight * 100;
+    		this.$paperFront.css('transform-origin', 'center ' + equation + '%');
+    	},
+    	//hamburger icon fix to keep its position
+    	hamburgerFix: function(opening) {
+    			if(opening) {
+    				$('.hamburger').css({
+    					position: 'absolute',
+    					top: this.$window.scrollTop() + 30 + 'px'
+    				});
+    			} else {
+    				setTimeout(function() {
+    					$('.hamburger').css({
+    						position: 'absolute',
+    						top: '30px'
+    					});
+    				}, 300);
+    			}
+    		},
+    	bindEvents: function() {
+    		this.$hamburger.on('click', this.open.bind(this));
+    		$('.close').on('click', this.close.bind(this));
+    		this.$window.on('scroll', this.updateTransformOrigin.bind(this));
+    	},
+    	init: function() {
+    		this.bindEvents();
+    		this.updateTransformOrigin();
+    	},
+    };
 
-    <script id="dsq-count-scr" src="//fromruins.disqus.com/count.js" async></script>
+    paperMenu.init();
+    </script>
+
 
   </body>
 
