--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -17,6 +17,7 @@ html
       background-position: bottom
       background-size: cover
       margin-bottom: 5rem
+      text-align: center
 
       h1, h4, a
         color: $title-color
