--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -21,6 +21,7 @@ html
 
       h1, h4, a
         color: $title-color
+        max-width: 70%
       a:hover
         color: darken($title-color, 25%)
     .posts
