--- a/_sass/_base-mobile.sass
+++ b/_sass/_base-mobile.sass
@@ -10,3 +10,10 @@
   p
     font-size: ms(0)
     font-weight: 300
+
+  .read-more
+    float: none !important
+    &::before
+      content: "| "
+      color: #bcc1c4
+      font-weight: 300
