--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -32,3 +32,8 @@ html
 
       .post
         border-bottom: #bcc1c4 1px solid
+
+.read-more
+  float: right
+  color: lighten($text-color, 20%)
+  font-weight: 600
