--- a/_sass/_menu.sass
+++ b/_sass/_menu.sass
@@ -36,6 +36,7 @@ $primary-color: #243040
   position: relative
   overflow-x: hidden
   overflow-y: scroll
+  -webkit-overflow-scrolling: touch
   z-index: 2
   &.tilt
     overflow: hidden
