--- a/_sass/_base-mobile.sass
+++ b/_sass/_base-mobile.sass
@@ -1,11 +1,14 @@
 @include media-query($on-palm)
   h1
-    font-size: ms(2)
+    font-size: ms(2) / 1.2
     font-weight: 800
 
   h2
     font-size: ms(1)
     font-weight: 800
+
+  h4
+    font-size: ms(0)
 
   p
     font-size: ms(0)
