beautiful blockquotes, links fixed

--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -46,6 +46,14 @@ html
             background-color: #bcc1c4
             transition: all 0.3s ease-in-out
 
+      .posts, .post-content
+        blockquote
+          border-left: lighten($text-color, 20%) 0.4rem solid
+          margin: 0 0 0 -2rem
+          padding: 0 0 0 1.75rem
+          font-style: italic
+          font-weight: 200
+
 .read-more
   float: right
   color: lighten($text-color, 20%)
