aesthetic changes + edited about page

--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -51,8 +51,10 @@ html
           border-left: lighten($text-color, 20%) 0.4rem solid
           margin: 0 0 0 -2rem
           padding: 0 0 0 1.75rem
-          font-style: italic
-          font-weight: 200
+          p
+            line-height: 1.5
+            font-style: italic
+            font-weight: 200
 
 .read-more
   float: right
