--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <article class="post">
 
-  <header style="background-image: url({{ page.background }});">
+  <header style="background-image: url({{ page.background }}); background-position: {{page.background-position}};">
     <h1 itemprop="name headline">{{ page.title }}</h1>
   </header>
 
