--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -55,6 +55,8 @@ html
             line-height: 1.5
             font-style: italic
             font-weight: 200
+        hr
+          width: 60%
 
 .read-more
   float: right
