horisontal ruler fixed

--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -46,7 +46,7 @@ html
             background-color: #bcc1c4
             transition: all 0.3s ease-in-out
 
-      .posts, .post-content
+      .post, .post-content
         blockquote
           border-left: lighten($text-color, 20%) 0.4rem solid
           margin: 0 0 0 -2rem
