share + read more

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     	<nav>
     		<div class="close"><span></span></div>
         <a href="{{ site.url }}">Home</a>
-    		<a href="{{ site.url }}about/">About</a>
+    		<a href="{{ site.url }}/about/">About</a>
 
         <div class="designed">Designed by<a href="https://twitter.com/InRetentis">@InRetentis</a></div>
 
