--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,8 @@ layout: default
     {{ content }}
   </div>
 
+  {% include share.html %}
+  {% include more-articles.html %}
   {% include comments.html %}
 
 </article>
