--- a/_sass/_base-mobile.sass
+++ b/_sass/_base-mobile.sass
@@ -18,5 +18,5 @@
     float: none !important
     &::before
       content: "| "
-      color: #bcc1c4
+      color: $grey-color
       font-weight: 300
