--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -31,7 +31,7 @@ h5
   font-family: $title-font-family
   font-weight: 300
   font-size: ms(0)
-  color: #bcc1c4
+  color: $grey-color
   margin: 2.5rem 0
 
 a
