--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,19 +4,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes" />
 
+  <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="57x57" href="../img/icons/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="../img/icons/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="../img/icons/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="../img/icons/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="../img/icons/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="../img/icons/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="../img/icons/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="../img/icons/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="../img/icons/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="../img/icons/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../img/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="../img/icons/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../img/icons/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="../img/icons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="../img/icons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="../img/icons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="../img/icons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="../img/icons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="../img/icons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="../img/icons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="../img/icons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="../img/icons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="../img/icons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../img/icons/favicon-16x16.png">
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
@@ -25,6 +26,14 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
+  <!-- Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,700,900,300italic,400italic,700italic,900italic|Open+Sans:400,800italic,700italic,600italic,400italic,300italic,800,700,600,300' rel='stylesheet' type='text/css'>
+
+  <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+
+  <!-- Icon pack -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/evil-icons/1.7.8/evil-icons.min.css">
+  <script src="https://cdn.jsdelivr.net/evil-icons/1.7.8/evil-icons.min.js"></script>
+
 </head>
