--- a/_sass/_menu.sass
+++ b/_sass/_menu.sass
@@ -15,12 +15,12 @@ $primary-color: #243040
       bottom: ms(0)
       font-size: ms(1) / 2
       font-family: 'Open Sans', sans-serif
-      color: #bcc1c4
+      color: $grey-color
       a
         font-family: inherit
         color: inherit
         &:hover
-          color: lighten(#bcc1c4, 25%)
+          color: $grey-color-light
     a
       font-family: 'Merriweather', serif
       display: block
