comment section pushed down

--- a/css/main.scss
+++ b/css/main.scss
@@ -66,5 +66,6 @@ $on-laptop:        800px;
         "menu",
         "menu-mobile",
         "share",
-        "more-articles"
+        "more-articles",
+        "comments"
 ;
