--- a/_sass/_share.sass
+++ b/_sass/_share.sass
@@ -3,6 +3,9 @@
   padding: 0
   border-top: $grey-color 1px solid
   border-bottom: $grey-color 1px solid
+  margin-bottom: 150px
+  margin-top: 100px
+
   list-style: none
 
   .share-item
@@ -31,6 +34,6 @@
 
 .social-icon
   fill: $social-color !important
-  
+
 .icon
   vertical-align: bottom
