--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -28,7 +28,7 @@ html
       margin: auto
       max-width: 710px
       width: 80%
-      padding-bottom: calc(5rem + 250px)
+      padding-bottom: 5rem
 
       .post
         border-bottom: $grey-color 1px solid
